--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <audio id="audio1" src="https://github.com/ingrid0012/SONIDOS/blob/1bfc52222d235c5544c8e5ab4cb2594ae6fd9fe9/WhatsApp-Audio-2023-11-07-at-3.27.59-PM.mp3"></audio>
+        <audio id="audio1" src="SONIDOS.mp3"></audio>
         <center>
         <br>
         <br>
