--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
         <br>
         <br>
         <div class="container">
-            <h1>Sonidos de la Ciudad</h1>
-            <p>En la ciudad podemos escuchar muchos sonidos; incluidos los carros, las personas hablando, la lluvia, los instrumentos, entre otras cosas.</p>
+            <h1>SONIDOS DE LA CIUDAD</h1>
+            <p>En la ciudad podemos escuchar muchos sonidos; incluidos los carros, las personas hablando, la lluvia, los instrumentos, entre otras cosas, a continuación puede dar click en el boton para reproducir un sonido que imita a lo que vivimos en la ciudad</p>
         </div>
-        
-        <button id="btn1"onclick="play()">REPRODUCIR</button>
+        <br>
+        <div class="container">
+        <button id="btn1" onclick="play()">REPRODUCIR</button>
         <button id="btn2"onclick="pause()">PAUSAR</button>
+        </div>
+        <br>
+        <div class="container">
+            <h2 id="etiqueta1">La ciudad aunque puede ser ruidosa siempre tiene lindos paisajes</h2>
+        </div>
+        <div class="container">
+            <img src="https://i.pinimg.com/originals/aa/61/4f/aa614f8a5bf5440ae48c982f8a5c2685.jpg">
+        </div>
+        <br>
+        <span>
+            <h3>Para finalizar una app en construcción donde también podemos ver sonidos de la ciudad</h3>
+            <br>
+            <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jguT3gwQ9AYjhblieESivv6kqnHd0Lx1EnhZ4dZ_3cr/embed?nosource"></iframe>
+        </span>
         </center>
 
 
